Refactoring of Game rendering and first experiments with JNI
Refactored the large amount of code in the GameRenderer
class (now renamed to CoreGameRenderer) by splitting it
into smaller classes, all deriving from a single abstract
AbstractGameRenderer class implementing a common interface,
GameRenderer, with  each of them intended to only render just
one aspect of the game screen (background, tunnels, actors,
player and player info such as score and number of bullets).

Also added: our first experiments at implementing an example
C language interface for the player to program his solution in.
The player writes his code in C, it is compiled into a shared
native library, it is called from Java using JNI, and the player
can also call Java methods also through JNI and a few specialized
C structs to hide the underlying logic which calls JNI functions
in C to access the desired methods and invoke them.

To accomodate these experiments, the Player interface was modified
as well as some other code that works with the player.

Also the build.gradle file for the :core module was updated to create
and configure the shared library before compiling java code

Unfortunately, calling Java methods from C does not seem to work,
for as yet unknown reasons. Also loading the shared library is
problematic, as it sometimes fails. Also only Linux and possibly
other UNIX or UNIX-like system using .so shared libraries are
supported in compilation.

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -9,3 +9,14 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 eclipse.project {
     name = appName + "-core"
 }
+
+task libGen (type: Exec) {
+    workingDir "$projectDir/src/nativeCode"
+    if (System.getProperty('os.name').toLowerCase().contains('windows')) {
+        commandLine 'cmd', '/c', './script.bat'
+    } else {
+        commandLine 'sh', '-c', './script.sh'
+    }
+}
+
+compileJava.dependsOn libGen
