--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -12,6 +12,7 @@ task run(dependsOn: classes, type: JavaExec) {
     standardInput = System.in
     workingDir = project.assetsDir
     ignoreExitValue = true
+    jvmArgs = ['-Djava.library.path=' + project(":core").projectDir + "/libs"]
 }
 
 task dist(type: Jar) {
