--- a/core/build.gradle
+++ b/core/build.gradle
@@ -11,7 +11,7 @@ eclipse.project {
 }
 
 task libGen (type: Exec) {
-    workingDir "$projectDir/src/nativeCode"
+    workingDir "$projectDir/src/native"
     if (System.getProperty('os.name').toLowerCase().contains('windows')) {
         commandLine 'cmd', '/c', './script.bat'
     } else {
