--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-        compile "junit:junit:4.12"
+        testCompile "junit:junit:4.12"
     }
 }
 
