--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,11 +3,16 @@ apply plugin: "java"
 sourceCompatibility = 1.8
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
-sourceSets.main.java.srcDirs = [ "src/" ]
-
+sourceSets.main.java.srcDirs = [ "src/main" ]
+sourceSets.test.java.srcDirs = [ "src/test" ]
 
 eclipse.project {
     name = appName + "-core"
+}
+
+// set the working directory for tests to assets
+test.doFirst {
+    workingDir = new File("assets")
 }
 
 task libGen (type: Exec) {
@@ -19,4 +24,7 @@ task libGen (type: Exec) {
     }
 }
 
-compileJava.dependsOn libGen
+// Since we are postponing the possible implementation of a C language game API,
+// it would be a waste to recompile the native sources at each build.
+// Uncomment the next line only when restarting development on the native API.
+//compileJava.dependsOn libGen
