Integrated game into the arena-runner framework (1st version).
Additionally, some rendering fixes (using Gdx.grpahics.foregroundFPS
instead of Thread.sleep(millis) to set FPS to desired value).

Also, not sure why there was suddenly a problem with the players renderer
(the animation now requires a type parameter of TextureRegion to compile)
but it was also fixed.

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ allprojects {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
+        maven { url "http://maven.kpi.fei.tuke.sk/artifactory/libs-release/" }
     }
 }
 
@@ -48,6 +49,8 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        compile 'kpi.openlab.arena:arena-runner-libgdx:1.0'
+        compile 'kpi.openlab.arena:arena-runner:1.0'
         testCompile "junit:junit:4.12"
     }
 }
