--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -17,16 +17,28 @@ task run(dependsOn: classes, type: JavaExec) {
 
 task dist(type: Jar) {
     from files(sourceSets.main.output.classesDir)
-    from files(sourceSets.main.output.resourcesDir)
+    //from files(sourceSets.main.output.resourcesDir)
     from {configurations.compile.collect {zipTree(it)}}
-    from files(project.assetsDir);
+    //from files(project.assetsDir);
+
+    // do not include any working Player implementations in the JAR
+    exclude 'szakacs/kpi/fei/tuke/player/*.class'
  
     manifest {
         attributes 'Main-Class': project.mainClassName
     }
 }
-
 dist.dependsOn classes
+
+// use this task to create a desktop application ZIP inside the project root
+
+task createDistributionZip(type: Zip) {
+    from project.assetsDir, files('build/libs')
+    exclude 'GIMP'
+    baseName appName + "-desktop"
+    destinationDir new File('..')
+}
+createDistributionZip.dependsOn dist
 
 eclipse {
     project {
