Graphical modifications and added soound effects.
The tunnel cell images were slightly modified.

Also, using GDX-Freetype for fonts to make them look better
(currently using UbuntuMono-B font).

Also, added sound effects to the game, when any player shoots
or loads bullets or moves his pipe.

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ project(":desktop") {
         compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
+        compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
     }
 }
 
@@ -49,6 +50,7 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         compile 'kpi.openlab.arena:arena-runner-libgdx:1.0'
         compile 'kpi.openlab.arena:arena-runner:1.0'
         testCompile "junit:junit:4.12"
